fix for overflowing attribute list

--- a/app/views/datasets/datasets.css
+++ b/app/views/datasets/datasets.css
@@ -56,10 +56,11 @@
 .inline-list {
     list-style-type: none;
     padding: 0;
+    overflow: hidden;
 }
 
 .inline-list li {
-    display: inline;
+    float: left;
     margin: 0.25em;
 }
 
